Data NA-encoding

--- a/model.ipynb
+++ b/model.ipynb
@@ -75,32 +75,17 @@
     "    fig, ax = plt.subplots(1, 1)\n",
     "    df[cols].boxplot(ax=ax)\n",
     "    plt.xticks(rotation = 90)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d0dc0830",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.show()\n",
+    "    \n",
     "## Bivar Tools\n",
     "def data_corr(df, size = None, cols = None):\n",
     "    cols = df.columns if cols is None else cols \n",
     "    size = (len(cols), len(cols)) if size is None else size\n",
     "    plt.figure(figsize = size)\n",
     "    sns.heatmap(df.corr(), cmap = \"coolwarm\", square = True, vmin = -1, vmax = 1, annot=True)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "1b4bbc6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    plt.show()\n",
+    "        \n",
+    "## For date conversion\n",
     "month_lib = {\n",
     "    \"jan\": 0,\n",
     "    \"feb\": 1,    \n",
@@ -119,178 +104,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "646c43e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"datasets_hi4/train-data.csv\", sep=\";\")\n",
-    "df_GSCPI = pd.read_csv(\"datasets_hi4/extra-dataset/GSCPI_data.csv\")\n",
-    "df_LPI = pd.read_csv(\"datasets_hi4/extra-dataset/LPIextend.csv\")\n",
-    "df_econ = pd.read_csv(\"datasets_hi4/extra-dataset/worldbank_economic_data.csv\")\n",
-    "df_inf = pd.read_csv(\"datasets_hi4/extra-dataset/worldbank_inflation_data.csv\")\n",
-    "df_epi = pd.read_csv(\"datasets_hi4/extra-dataset/epi2022results05302022.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0924718c",
+   "execution_count": 3,
+   "id": "3220002f",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
+    "df = pd.read_csv(\"datasets_hi4/train-data.csv\", sep=\";\")\n",
+    "\n",
     "date = df[\"Date\"].str.split(n=1, expand=True)\n",
     "df[\"Year\"] = date[1]\n",
     "df[\"Trisem\"] = pd.to_numeric(date[0].str.slice(stop=3).replace(month_lib))//3\n",
-    "df[\"Trisem\"] = df[\"Trisem\"].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d1e8da07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop_duplicates(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b45756df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df[\"Trisem\"] = df[\"Trisem\"].astype(str)\n",
+    "\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "\n",
     "for col in [\"Month 1\", \"Month 2\", \"Month 3\", \"Month 4\"]:\n",
-    "    df[col] = pd.to_numeric(df[col].str.replace(\" \", \"\"))"
+    "    df[col] = pd.to_numeric(df[col].str.replace(\" \", \"\"))\n",
+    "    \n",
+    "df['Month 1'] = df.groupby('Strategic Product Family proxy')['Month 1'].transform(lambda x: x.fillna(x.mean()))\n",
+    "df[\"Product Life cycel status\"] = df[\"Product Life cycel status\"].fillna(\"ACT\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8836c1bc",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year-Month</th>\n",
-       "      <th>GSCPI</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Trisem</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01</td>\n",
-       "      <td>0.090108</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-02</td>\n",
-       "      <td>1.191976</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-03</td>\n",
-       "      <td>2.546002</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-04</td>\n",
-       "      <td>3.161703</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-05</td>\n",
-       "      <td>2.537110</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Year-Month     GSCPI  Year Trisem\n",
-       "0    2020-01  0.090108  2020      0\n",
-       "1    2020-02  1.191976  2020      0\n",
-       "2    2020-03  2.546002  2020      1\n",
-       "3    2020-04  3.161703  2020      1\n",
-       "4    2020-05  2.537110  2020      1"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 4,
+   "id": "b03dbf51",
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "df_GSCPI = pd.read_csv(\"datasets_hi4/extra-dataset/GSCPI_data.csv\")\n",
+    "\n",
     "df_GSCPI[\"Year\"] = df_GSCPI[\"Year-Month\"].str.slice(stop=4)\n",
     "df_GSCPI[\"Trisem\"] = pd.to_numeric(df_GSCPI[\"Year-Month\"].str.slice(start=5))//3\n",
     "df_GSCPI[\"Trisem\"] = df_GSCPI[\"Trisem\"].astype(str)\n",
-    "df_GSCPI.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8cc7419b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "df_GSCPI = df_GSCPI.groupby([\"Year\", \"Trisem\"], as_index=False)[\"GSCPI\"].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9c9c2ba9",
+   "execution_count": 5,
+   "id": "8bfb178a",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdf_c = pd.merge(df, df_GSCPI, on=[\"Year\", \"Trisem\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "7512d337",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stderr",
@@ -319,40 +176,34 @@
      "output_type": "stream",
      "text": [
       "Country Cleaning Report:\n",
-      "\t248 values cleaned (99.2%)\n",
-      "\t2 values unable to be parsed (0.8%), set to NaN\n",
-      "Result contains 248 (99.2%) values in the correct format and 2 null values (0.8%)\n"
+      "\t249 values cleaned (99.6%)\n",
+      "\t1 values unable to be parsed (0.4%), set to NaN\n",
+      "Result contains 249 (99.6%) values in the correct format and 1 null values (0.4%)\n"
      ]
     }
    ],
    "source": [
+    "df_LPI = pd.read_csv(\"datasets_hi4/extra-dataset/LPIextend.csv\")\n",
+    "\n",
     "cols = []\n",
     "for col in df_LPI.columns:\n",
     "    if \"Score\" in col:\n",
     "            cols.append(col)\n",
     "            \n",
     "df_LPI[\"LogPerf\"] = df_LPI[cols].mean(axis=1)\n",
+    "df_LPI = df_LPI.replace('TC<rkiye',\"Turkey\")\n",
     "df_LPI = clean_country(df_LPI, \"Country\", output_format=\"alpha-2\", inplace=True)\n",
-    "df_LPI = df_LPI[[\"Country_clean\", \"LogPerf\"]].rename(columns={\"Country_clean\": \"Country\"}) "
+    "df_LPI[\"Country_clean\"] = df_LPI[\"Country_clean\"].fillna('NA')\n",
+    "\n",
+    "df_LPI = df_LPI[[\"Country_clean\", \"LogPerf\"]].rename(columns={\"Country_clean\": \"Country\"}) \n",
+    "df_LPI[\"LogPerf\"] = df_LPI[\"LogPerf\"].transform(lambda x: x.fillna(x.mean() - (1/5) * x.std()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "73f249ca",
+   "execution_count": 6,
+   "id": "f5ab7039",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdf = pd.merge(mdf_c, df_LPI, on = \"Country\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "8acc8909",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "name": "stderr",
@@ -381,38 +232,45 @@
      "output_type": "stream",
      "text": [
       "Country Cleaning Report:\n",
-      "\t8041 values cleaned (98.94%)\n",
-      "\t86 values unable to be parsed (1.06%), set to NaN\n",
-      "Result contains 8041 (98.94%) values in the correct format and 86 null values (1.06%)\n"
+      "\t8084 values cleaned (99.47%)\n",
+      "\t43 values unable to be parsed (0.53%), set to NaN\n",
+      "Result contains 8084 (99.47%) values in the correct format and 43 null values (0.53%)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_38250/1381205224.py:11: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "/tmp/ipykernel_10965/2549750652.py:18: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  dfi_grouped = df_inf.groupby([\"Year\", \"Trisem\", \"Country\"])[\"Energy Price Index\", \"Headline Consumer Price Index\"].mean()\n"
      ]
     }
    ],
    "source": [
+    "df_inf = pd.read_csv(\"datasets_hi4/extra-dataset/worldbank_inflation_data.csv\")\n",
+    "\n",
     "inf_years = np.array(list(map(lambda x: x.split('-')[0], df_inf[\"Year-Month\"].to_list())))\n",
     "inf_months = np.array(list(map(lambda x: int(x.split('-')[1]), df_inf[\"Year-Month\"].to_list())))\n",
     "\n",
     "df_inf[\"Year\"] = inf_years\n",
     "df_inf[\"Trisem\"] = list(map(str, (inf_months - 1)//4))\n",
     "\n",
-    "df_inf =  clean_country(df_inf, \"Country\", output_format=\"alpha-2\").dropna(subset = \"Country\")\n",
+    "df_inf = df_inf.replace('SÃ£o TomÃ© and Principe',\"Sao Tome and Principe\")\n",
+    "df_inf = clean_country(df_inf, \"Country\", output_format=\"alpha-2\")\n",
     "df_inf.drop(columns = ['Country', 'Year-Month'], inplace = True)\n",
     "df_inf.rename(columns = {\"Country_clean\": \"Country\"}, inplace = True)\n",
+    "df_inf[\"Country\"] = df_inf[\"Country\"].fillna('NA')\n",
+    "\n",
+    "df_inf[\"Energy Price Index\"] = df_inf[\"Energy Price Index\"].transform(lambda x: x.fillna(x.mean()))\n",
+    "df_inf[\"Headline Consumer Price Index\"] = df_inf[\"Headline Consumer Price Index\"].transform(lambda x: x.fillna(x.mean()))\n",
     "\n",
     "dfi_grouped = df_inf.groupby([\"Year\", \"Trisem\", \"Country\"])[\"Energy Price Index\", \"Headline Consumer Price Index\"].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9f6e828e",
+   "execution_count": 7,
+   "id": "3d54c7d2",
    "metadata": {},
    "outputs": [
     {
@@ -449,6 +307,8 @@
     }
    ],
    "source": [
+    "df_epi = pd.read_csv(\"datasets_hi4/extra-dataset/epi2022results05302022.csv\")\n",
+    "\n",
     "df_epi = clean_country(df_epi, \"country\", output_format=\"alpha-2\", inplace=True)\n",
     "df_epi = df_epi[[\"country_clean\", \"SDA.new\", \"NXA.new\", \"CDA.new\", \"CHA.new\", \"NDA.new\",\n",
     "                 \"BCA.new\", \"GIB.new\", \"GHP.new\"]]\n",
@@ -456,68 +316,32 @@
     "df_epi[\"EmAv\"] = df_epi[[\"NXA.new\", \"CDA.new\", \"SDA.new\", \"BCA.new\", \"NDA.new\"]].mean(axis=1)\n",
     "df_epi = df_epi.drop([\"NXA.new\",\"CDA.new\",\"SDA.new\",\"BCA.new\",\"NDA.new\"],axis=1)\n",
     "\n",
-    "# df_EPI[\"Country\"] = df_EPI[\"Country\"].fillna('NA')"
+    "df_epi[\"Country\"] = df_epi[\"Country\"].fillna('NA')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7b42e5df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mdf = pd.merge(mdf, df_epi, on=[\"Country\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "e3b10352",
+   "execution_count": 9,
+   "id": "2d13f13c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/alper/anaconda3/lib/python3.8/site-packages/dask/dataframe/core.py:6597: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                     | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Country Cleaning Report:\n",
-      "Result contains 844 (99.06%) values in the correct format and 8 null values (0.94%)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_38250/1352356714.py:18: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_econ = df_econ.append(TW_rows, ignore_index = True)\n"
+     "ename": "NameError",
+     "evalue": "name 'df_econ' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_10965/2512966269.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_econ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_econ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Macao\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mFalse\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_econ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Turkiye'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Turkey\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_country\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_econ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"alpha-2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_econ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Country_clean\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_econ' is not defined"
      ]
     }
    ],
    "source": [
     "df_econ = df_econ[df_econ[\"Country\"].str.contains(\"Macao\")==False ]\n",
     "\n",
-    "df_econ =  clean_country(df_econ, \"Country\", output_format=\"alpha-2\")\n",
+    "df_econ = df_econ.replace('Turkiye',\"Turkey\")\n",
+    "df_econ = clean_country(df_econ, \"Country\", output_format=\"alpha-2\")\n",
     "df_econ = df_econ.dropna(subset = \"Country_clean\")\n",
     "df_econ.drop(columns = ['Country'], inplace = True)\n",
     "df_econ.rename(columns = {\"Country_clean\": \"Country\"}, inplace = True)\n",
@@ -529,6 +353,10 @@
     "                   'GDP (current US$)', \n",
     "                   'Imports of goods and services (annual % growth)']].drop_duplicates()\n",
     "\n",
+    "df_econ[\"Final consumption expenditure (annual % growth)\"] = df_econ[\"Final consumption expenditure (annual % growth)\"].transform(lambda x: x.fillna(x.mean()))\n",
+    "df_econ[\"Imports of goods and services (annual % growth)\"] = df_econ[\"Imports of goods and services (annual % growth)\"].transform(lambda x: x.fillna(x.mean()))\n",
+    "df_econ[\"GDP (current US$)\"] = df_econ[\"GDP (current US$)\"].transform(lambda x: x.fillna(x.mean()))\n",
+    "\n",
     "TW_rows = pd.DataFrame([[\"TW\", str(2020 + i), np.nan, np.nan, np.nan] for i in range(4)], \n",
     "                       columns = df_econ.columns)\n",
     "\n",
@@ -538,27 +366,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbea6ff7",
+   "id": "66c948b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdf = pd.merge(mdf, df_econ, on = ['Country', 'Year'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b725d58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "mdf = pd.merge(df, df_GSCPI, on=[\"Year\", \"Trisem\"])\n",
+    "mdf = pd.merge(mdf, df_LPI, on =[\"Country\"])\n",
+    "mdf = pd.merge(mdf, df_epi, on=[\"Country\"])\n",
+    "mdf = pd.merge(mdf, df_econ, on = ['Country', 'Year'])\n",
     "mdf2 = pd.merge(mdf, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64979506",
+   "id": "9dfa6874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1530e288",
+   "id": "e1d87360",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,19 +404,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f39d160",
+   "id": "2e6d5067",
    "metadata": {},
    "outputs": [],
    "source": [
     "mdf_test = pd.merge(X_test, df_GSCPI, on=[\"Year\", \"Trisem\"])\n",
-    "mdff_test = pd.merge(mdf_test, df_LPI, on = \"Country\")\n",
-    "mX_test = pd.merge(mdff_test, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
+    "mdf_test = pd.merge(mdf_test, df_LPI, on =[\"Country\"])\n",
+    "mdf_test = pd.merge(mdf_test, df_epi, on=[\"Country\"])\n",
+    "mdf_test = pd.merge(mdf_test, df_econ, on = ['Country', 'Year'])\n",
+    "mdf_test = pd.merge(mdf_test, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a0e8a75",
+   "id": "9c0f682d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea385e13",
+   "id": "9a8db8ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be44e7ab",
+   "id": "acc3ad62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a37f480a",
+   "id": "b0cfa45e",
    "metadata": {},
    "outputs": [],
    "source": [
