--- a/model.ipynb
+++ b/model.ipynb
@@ -153,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/alper/anaconda3/lib/python3.8/site-packages/dask/dataframe/core.py:6597: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
+      "C:\\Users\\alper\\anaconda3\\Lib\\site-packages\\dask\\dataframe\\core.py:7067: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -165,7 +165,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|                                                     | 0/8 [00:00<?, ?it/s]"
+       "  0%|                                                                                            | 0/8 [00:00<…"
       ]
      },
      "metadata": {},
@@ -209,7 +209,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/alper/anaconda3/lib/python3.8/site-packages/dask/dataframe/core.py:6597: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
+      "C:\\Users\\alper\\anaconda3\\Lib\\site-packages\\dask\\dataframe\\core.py:7067: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -221,7 +221,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|                                                     | 0/8 [00:00<?, ?it/s]"
+       "  0%|                                                                                            | 0/8 [00:00<…"
       ]
      },
      "metadata": {},
@@ -241,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10965/2549750652.py:18: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "C:\\Users\\alper\\AppData\\Local\\Temp\\ipykernel_12724\\2549750652.py:18: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  dfi_grouped = df_inf.groupby([\"Year\", \"Trisem\", \"Country\"])[\"Energy Price Index\", \"Headline Consumer Price Index\"].mean()\n"
      ]
     }
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/alper/anaconda3/lib/python3.8/site-packages/dask/dataframe/core.py:6597: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
+      "C:\\Users\\alper\\anaconda3\\Lib\\site-packages\\dask\\dataframe\\core.py:7067: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -289,7 +289,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|                                                     | 0/8 [00:00<?, ?it/s]"
+       "  0%|                                                                                            | 0/8 [00:00<…"
       ]
      },
      "metadata": {},
@@ -321,23 +321,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2d13f13c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_econ' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_10965/2512966269.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_econ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_econ\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Macao\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mFalse\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_econ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Turkiye'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"Turkey\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_country\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_econ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Country\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"alpha-2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdf_econ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_econ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Country_clean\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df_econ' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alper\\anaconda3\\Lib\\site-packages\\dask\\dataframe\\core.py:7067: FutureWarning: Meta is not valid, `map_partitions` and `map_overlap` expects output to be a pandas object. Try passing a pandas object as meta or a dict or tuple representing the (name, dtype) of the columns. In the future the meta you passed will not work.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|                                                                                            | 0/8 [00:00<…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country Cleaning Report:\n",
+      "\t856 values cleaned (80.75%)\n",
+      "\t204 values unable to be parsed (19.25%), set to NaN\n",
+      "Result contains 856 (80.75%) values in the correct format and 204 null values (19.25%)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alper\\AppData\\Local\\Temp\\ipykernel_12724\\1679561745.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_econ = df_econ.append(TW_rows, ignore_index = True)\n"
      ]
     }
    ],
    "source": [
+    "df_econ = pd.read_csv(\"datasets_hi4/extra-dataset/worldbank_economic_data.csv\")\n",
+    "\n",
     "df_econ = df_econ[df_econ[\"Country\"].str.contains(\"Macao\")==False ]\n",
     "\n",
     "df_econ = df_econ.replace('Turkiye',\"Turkey\")\n",
@@ -357,7 +388,10 @@
     "df_econ[\"Imports of goods and services (annual % growth)\"] = df_econ[\"Imports of goods and services (annual % growth)\"].transform(lambda x: x.fillna(x.mean()))\n",
     "df_econ[\"GDP (current US$)\"] = df_econ[\"GDP (current US$)\"].transform(lambda x: x.fillna(x.mean()))\n",
     "\n",
-    "TW_rows = pd.DataFrame([[\"TW\", str(2020 + i), np.nan, np.nan, np.nan] for i in range(4)], \n",
+    "TW_rows = pd.DataFrame([[\"TW\", str(2020 + i), \n",
+    "                         df_econ[\"Final consumption expenditure (annual % growth)\"].mean(), \n",
+    "                         df_econ[\"GDP (current US$)\"].mean(),\n",
+    "                         df_econ[\"Imports of goods and services (annual % growth)\"].mean()] for i in range(4)], \n",
     "                       columns = df_econ.columns)\n",
     "\n",
     "df_econ = df_econ.append(TW_rows, ignore_index = True)"
@@ -365,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "66c948b8",
    "metadata": {},
    "outputs": [],
@@ -374,12 +408,12 @@
     "mdf = pd.merge(mdf, df_LPI, on =[\"Country\"])\n",
     "mdf = pd.merge(mdf, df_epi, on=[\"Country\"])\n",
     "mdf = pd.merge(mdf, df_econ, on = ['Country', 'Year'])\n",
-    "mdf2 = pd.merge(mdf, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
+    "mdf_train = pd.merge(mdf, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9dfa6874",
    "metadata": {},
    "outputs": [],
@@ -390,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e1d87360",
    "metadata": {},
    "outputs": [],
@@ -403,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2e6d5067",
    "metadata": {},
    "outputs": [],
@@ -417,18 +451,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9c0f682d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = mdf2.drop(columns = [\"Month 4\"])\n",
-    "y_train = mdf2[\"Month 4\"]"
+    "X_train = mdf_train.drop(columns = [\"Month 4\"])\n",
+    "y_train = mdf_train[\"Month 4\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9a8db8ec",
    "metadata": {},
    "outputs": [],
@@ -438,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "acc3ad62",
    "metadata": {},
    "outputs": [],
@@ -448,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b0cfa45e",
    "metadata": {},
    "outputs": [],
@@ -473,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
