--- a/model.ipynb
+++ b/model.ipynb
@@ -122,8 +122,8 @@
     "\n",
     "for col in [\"Month 1\", \"Month 2\", \"Month 3\", \"Month 4\"]:\n",
     "    df[col] = pd.to_numeric(df[col].str.replace(\" \", \"\"))\n",
-    "    \n",
-    "df['Month 1'] = df.groupby('Strategic Product Family proxy')['Month 1'].transform(lambda x: x.fillna(x.mean()))\n",
+    "       \n",
+    "#df['Month 1'] = df.groupby('Strategic Product Family proxy')['Month 1'].transform(lambda x: x.fillna(x.mean()))\n",
     "df[\"Product Life cycel status\"] = df[\"Product Life cycel status\"].fillna(\"ACT\")"
    ]
   },
@@ -241,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alper\\AppData\\Local\\Temp\\ipykernel_12724\\2549750652.py:18: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "C:\\Users\\alper\\AppData\\Local\\Temp\\ipykernel_15504\\2549750652.py:18: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  dfi_grouped = df_inf.groupby([\"Year\", \"Trisem\", \"Country\"])[\"Energy Price Index\", \"Headline Consumer Price Index\"].mean()\n"
      ]
     }
@@ -361,7 +361,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alper\\AppData\\Local\\Temp\\ipykernel_12724\\1679561745.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\alper\\AppData\\Local\\Temp\\ipykernel_15504\\1679561745.py:28: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df_econ = df_econ.append(TW_rows, ignore_index = True)\n"
      ]
     }
@@ -429,6 +429,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for col in [\"Month 1\", \"Month 2\", \"Month 3\"]:\n",
+    "    X_test[col] = pd.to_numeric(X_test[col].str.replace(\" \", \"\"))\n",
+    "\n",
     "date = X_test[\"Date\"].str.split(n=1, expand=True)\n",
     "X_test[\"Year\"] = date[1]\n",
     "X_test[\"Trisem\"] = pd.to_numeric(date[0].str.slice(stop=3).replace(month_lib))//3\n",
@@ -442,22 +445,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdf_test = pd.merge(X_test, df_GSCPI, on=[\"Year\", \"Trisem\"])\n",
-    "mdf_test = pd.merge(mdf_test, df_LPI, on =[\"Country\"])\n",
-    "mdf_test = pd.merge(mdf_test, df_epi, on=[\"Country\"])\n",
-    "mdf_test = pd.merge(mdf_test, df_econ, on = ['Country', 'Year'])\n",
-    "mdf_test = pd.merge(mdf_test, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
+    "X_test = pd.merge(X_test, df_GSCPI, on=[\"Year\", \"Trisem\"])\n",
+    "X_test = pd.merge(X_test, df_LPI, on =[\"Country\"])\n",
+    "X_test = pd.merge(X_test, df_epi, on=[\"Country\"])\n",
+    "X_test = pd.merge(X_test, df_econ, on = ['Country', 'Year'])\n",
+    "X_test = pd.merge(X_test, dfi_grouped, how = \"left\", on = [\"Year\", \"Trisem\", \"Country\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "9c0f682d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = mdf_train.drop(columns = [\"Month 4\"])\n",
-    "y_train = mdf_train[\"Month 4\"]"
+    "dataX, datay = mdf_train.drop(columns = [\"Month 4\"]), mdf_train[\"Month 4\"]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(dataX, datay, test_size = .2)\n",
+    "X_train['Month 1'] = X_train.groupby('Strategic Product Family proxy')['Month 1'].transform(lambda x: x.fillna(x.mean()))\n",
+    "X_test['Month 1'] = X_test.groupby('Strategic Product Family proxy')['Month 1'].transform(lambda x: x.fillna(x.mean()))"
    ]
   },
   {
